--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@tailwindcss/vite": "^4.0.14",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
+        "daisyui": "^5.0.6",
         "laravel-vite-plugin": "^1.2.0",
         "tailwindcss": "^4.0.14",
         "vite": "^6.0.11"
