--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "filament/tables": "^3.3",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "livewire/livewire": "^3.6"
+        "livewire/livewire": "^3.6",
+        "psr/log": "^1.0 || ^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
