--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "filament/filament": "^3.3",
         "filament/forms": "^3.3",
         "filament/tables": "^3.3",
+        "guzzlehttp/guzzle": "^7.9",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6",
