--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,9 @@ jobs:
           ssh -o StrictHostKeyChecking=no admin@74.48.81.227 << 'EOF'
             cd /home/admin/planexa-document-repo || exit 1
             git pull origin main || exit 1
-            ddev artisan migrate || exit 1
+            ddev artisan migrate:refresh --seed || exit 1
+            ddev artisan meeting:json-migrate || exit 1
+            ddev artisan meeting-video:json-migrate || exit 1
             ddev artisan optimize:cache || exit 1
             # Add any other commands you need to run
             echo "Deployment successful"
