--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "blade-ui-kit/blade-icons": "^1.8",
         "filament/filament": "^3.3",
         "filament/forms": "^3.3",
+        "filament/notifications": "^3.3",
         "filament/tables": "^3.3",
         "guzzlehttp/guzzle": "^7.9",
         "laravel/framework": "^12.0",
