--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,7 @@ jobs:
             cd /home/admin/planexa-document-repo || exit 1
             git pull origin main || exit 1
             ddev artisan migrate --seed || exit 1
+            ddev npm run build || exit 1
             ddev artisan optimize:clear || exit 1
             # Add any other commands you need to run
             echo "Deployment successful"
