--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "vite build",
-        "dev": "vite"
+        "build": "vite build --config vite.build.config.js",
+        "dev": "vite --config vite.config.js"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.10",
